fix compile error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required( VERSION 3.6 )
 project( Houdini_Minimal_Plugin )
 
 #list( APPEND CMAKE_PREFIX_PATH "$ENV{HFS}/toolkit/cmake" )
-list( APPEND CMAKE_PREFIX_PATH "C:/Program Files/Side Effects Software/Houdini 17.5.309/toolkit/cmake" )
+list( APPEND CMAKE_PREFIX_PATH "D:/Program Files/Side Effects Software/Houdini 18.0.499/toolkit/cmake" )
 find_package( Houdini REQUIRED )
 
 set( library_name Minimal_Plugin )
